--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,3 +3,5 @@ steps:
   args: ['build', '-t', 'gcr.io/firstcloudrun-354014/google-cloud-run:$SHORT_SHA', '.']
 - name: gcr.io/cloud-builders/docker
   args: ['push', 'gcr.io/firstcloudrun-354014/google-cloud-run:$SHORT_SHA']
+- name: gcr.io/cloud-builders/gcloud
+  args: ['beta', 'run', 'deploy', 'firstcloudrun-354014', '--region=europe-north1', '--platform=managed', '--image=gcr.io/firstcloudrun-354014/google-cloud-run:$SHORT_SHA']
